samples/_failures_safe/1761656863_8423ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3a1058d9.c: In function ‘main’:
./samples/SAFE/__tmp_3a1058d9.c:169:12: error: missing terminating " character
  169 |     printf("Enter data (numbers), 'done' to validate,
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3a1058d9.c:169:5: error: expected expression at end of input
  169 |     printf("Enter data (numbers), 'done' to validate,
      |     ^~~~~~
./samples/SAFE/__tmp_3a1058d9.c:169:5: error: expected declaration or statement at end of input
